--- a/PracticeProgram/.classpath
+++ b/PracticeProgram/.classpath
@@ -5,7 +5,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="OwnPractice"/>
 	<classpathentry kind="src" path="LogicMojo_Practice"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
