--- a/PracticeProgram/.classpath
+++ b/PracticeProgram/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="src" path="LeetCode"/>
 	<classpathentry kind="src" path="PracticeProgram"/>
 	<classpathentry kind="src" path="BasicPrograms"/>
+	<classpathentry kind="src" path="ZohoPractice"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
